<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsuarioMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgPerfilUsuario"
                    android:layout_width="85dp"
                    android:layout_height="90dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    app:srcCompat="@drawable/icone_usuario" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutPerfil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/NomeUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Cassiano Silva"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ctLocalOcorrencia"
                    android:layout_width="380dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/Texto_Local_Ocorrencia" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ctImagemOcorrencia"
                    android:layout_width="380dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/Imagem_Ocorrência" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgOcorrenciaConsulta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/camera_ocorrencia" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ctDataOcorrencia"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:text="@string/Texto_Data_Ocorrencia_Postadada"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ctHorarioOcorrencia"
                    android:layout_width="200dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:text="@string/Texto_Horario_Ocorrencia"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ctTextoStatusOcorrencia"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Texto_Status_Ocorrencia"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ctStatusOcorrencia"
                    android:layout_width="5dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="18sp" />

                <Spinner
                    android:id="@+id/spinnerStatus"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/ctObservacoes"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:hint="@string/Caixa_Observações"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="75dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btAlterarDadosOcorrencia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="60dp"
                    android:background="@drawable/botao_customizado"
                    android:gravity="center"
                    android:text="@string/Texto_Botão_Alterar_Ocorrencia"
                    android:textColor="@android:color/background_dark"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>